# cmaketest

./: README.md
1-simple-run/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello  test.cpp
2-add-directory/: CMakeLists.txt
2-add-directory/src/: CMakeCache.txt  Makefile  Student.cpp  cmake_install.cmake  mainapp.cpp  testStudent
3-add-so/: CMakeLists.txt
3-add-so/include/: Student.h
3-add-so/src/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  libtestStudent.dylib
4-add-static/: CMakeLists.txt
4-add-static/src/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
5-use-lib/: CMakeCache.txt  CMakeLists.txt  Makefile  TestLibrary  cmake_install.cmake  main.cpp
